# e1_drlocal

./: .gitignore  README-ja.md  README.md
e1_drlocal/: pyproject.toml  test_tools.py  test_tools_litellm.py
e1_drlocal/src/e1_drlocal/: constants.py  crew.py  main.py  state.py  utils.py
e1_drlocal/src/e1_drlocal/config/: agents.yaml  tasks.yaml
e1_drlocal/src/e1_drlocal/tools/: __init__.py  searxng_tool.py  web_fetch_tool.py
