[project]
name = "e1_drlocal"
version = "0.1.0"
description = "Deep Research - CrewAI Flows ベースのマルチエージェント調査システム"
license = "Apache-2.0"
requires-python = ">=3.10,<3.14"

dependencies = [
    "crewai[google-genai,litellm,tools]>=0.86.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "pydantic>=2.0.0",
    "tenacity>=8.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
kickoff = "e1_drlocal.main:kickoff"
plot = "e1_drlocal.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/e1_drlocal"]

